Fix button alignment on invite page

--- a/src/modules/settings/Settings.module.scss
+++ b/src/modules/settings/Settings.module.scss
@@ -1,7 +1,7 @@
 :global(#root) {
   .button {
     display: block;
-    margin: 16px auto auto;
+    margin-top: 16px;
   }
 
   @media only screen and (min-width: 768px) {
